# gobject-demo

./: CMakeLists.txt  main.c  my-animal.c  my-animal.h  my-cat.c  my-cat.h
